# feedgen

./: Cargo.toml  README.md  feedgen.example.toml  feedgen.service
lua/: debian-news.example.lua
migrations/: 20240711143546_set-up-initial-schema.sql
src/: cli.rs  config.rs  extractor.rs  fetch.rs  main.rs  server.rs  state.rs  storage.rs  template.rs  xpath.rs
src/config/: types.rs
src/extractor/: lua.rs  sxd.rs  xpath.rs
src/extractor/lua/: api.rs  types.rs
src/server/: responses.rs  routes.rs
src/storage/: entities.rs
src/template/: index.hbs
