[package]
name = "feedgen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
clap = { version = "4.5.9", features = ["derive", "env"] }
handlebars = "5.1.2"
http-cache-reqwest = { version = "0.14.0", features = ["manager-moka"] }
rand = { version = "0.8.5", features = ["small_rng"] }
reqwest = "0.12.5"
reqwest-middleware = "0.3.2"
rss = "2.0.8"
serde = { version = "1.0.203", features = ["derive"] }
skyscraper = "0.6.4"
sqlx = { version = "0.7.4", features = ["macros", "migrate", "runtime-tokio", "sqlite", "time"], default-features = false }
time = "0.3.36"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = "0.7.11"
toml = "0.8.14"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
urlencoding = "2.1.3"
