[package]
name = "feedgen"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
clap = { version = "4.5.9", features = ["derive", "env"] }
derive_more = { version = "0.99.18", default-features = false, features = ["from"] }
elsa = "1.10.0"
handlebars = "5.1.2"
html5ever = "0.27.0"
http-cache-reqwest = { version = "0.14.0", features = ["manager-moka"] }
indextree = "4.6.1"
rand = { version = "0.8.5", features = ["small_rng"] }
regex-lite = "0.1.6"
reqwest = "0.12.5"
reqwest-middleware = "0.3.2"
rss = "2.0.8"
serde = { version = "1.0.203", features = ["derive"] }
skyscraper = "0.6.4"
sqlx = { version = "0.7.4", features = ["macros", "migrate", "runtime-tokio", "sqlite", "time"], default-features = false }
sxd-document = "0.3.2"
sxd-xpath = { version = "0.4.2", git = "https://github.com/slowlime/sxd-xpath.git", branch = "default-ns" }
time = { version = "0.3.36", features = ["formatting", "local-offset", "parsing"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = "0.7.11"
toml = "0.8.14"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "local-time"] }
urlencoding = "2.1.3"
